--- a/PrjMRP.dproj
+++ b/PrjMRP.dproj
@@ -162,6 +162,14 @@
             <Form>frmPurchasePart</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="uTax.pas">
+            <Form>frmTaxCode</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="uPR.pas">
+            <Form>frmPR</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
