--- a/PrjMRP.dproj
+++ b/PrjMRP.dproj
@@ -170,6 +170,14 @@
             <Form>frmPR</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="uRegister.pas">
+            <Form>frmRegister</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="uLogin.pas">
+            <Form>frmLogin</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
