--- a/PrjMRP.dproj
+++ b/PrjMRP.dproj
@@ -178,6 +178,10 @@
             <Form>frmLogin</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="uPRtoPO.pas">
+            <Form>frmPRtoPO</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
